test/Fail/Issue779pattern.err
Issue779pattern.agda:7.7-8: error: [ShouldBeRecordPattern]
Expected record pattern
when checking that the pattern c has type D
